--- a/.github/workflows/jaeger-release.yaml
+++ b/.github/workflows/jaeger-release.yaml
@@ -76,10 +76,20 @@ jobs:
         new-chart-version: ${{ github.event.inputs.version }}
         chart-yaml-path: ${{ github.event.inputs.path-to-chart }}
 
-    - name: Run Commit and Push Action
-      uses: Netcracker/qubership-workflow-hub/actions/commit-and-push@9538833017019ab6bbc2138d3034778dfe3a5d1f # v2.0.6
-      with:
-        commit_message: "Update chart version to v${{ github.event.inputs.version }}"
+    - name: Commit and push chart version
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        VERSION: ${{ github.event.inputs.version }}
+        CHART_PATH: ${{ github.event.inputs.path-to-chart }}
+        REPO: ${{ github.repository }}
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git remote set-url origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${REPO}.git"
+        git add "$CHART_PATH"
+        git diff --staged --quiet && echo "No chart changes to commit" && exit 0
+        git commit -m "Update chart version to v${VERSION}"
+        git push origin HEAD:"${{ github.ref_name }}"
 
     - name: "Create release tag"
       uses: netcracker/qubership-workflow-hub/actions/tag-action@9538833017019ab6bbc2138d3034778dfe3a5d1f # v2.0.6
@@ -114,24 +124,47 @@ jobs:
 
   github-release:
     needs: [docker-build]
-    uses: netcracker/qubership-workflow-hub/.github/workflows/release-drafter.yml@9538833017019ab6bbc2138d3034778dfe3a5d1f # v2.0.6
-    with:
-      version: ${{ github.event.inputs.version }}
-      publish: false
+    permissions:
+      contents: write
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v6.0.0
+        with:
+          fetch-depth: 0
+          ref: ${{ github.ref_name }}
+
+      - name: Run Release Drafter
+        uses: netcracker/release-drafter@267d2e0268deae5d44f3ba5029dd4d6e85f9d52d # v6.1.1 upstream
+        with:
+          config-name: release-drafter-config.yml
+          publish: 'false'
+          name: v${{ github.event.inputs.version }}
+          tag: v${{ github.event.inputs.version }}
+          version: ${{ github.event.inputs.version }}
+          latest: 'true'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   upload-assets:
     needs: [github-release]
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v6.0.0
 
-    - name: Archive and Upload Assets
-      uses: netcracker/qubership-workflow-hub/actions/archive-and-upload-assets@9538833017019ab6bbc2138d3034778dfe3a5d1f # v2.0.6
+    - name: Create archives
+      run: |
+        mkdir -p dist
+        tar -czf dist/helm-charts.tar.gz -C . charts
+        tar -cf dist/docs.tar -C . docs
+
+    - name: Upload assets to release
+      uses: netcracker/qubership-workflow-hub/actions/assets-action@9538833017019ab6bbc2138d3034778dfe3a5d1f # v2.0.6
       with:
-        config-path: './.github/assets-config.yml'
-        dist-path: './dist'
-        upload: true
-        ref: v${{ github.event.inputs.version }}
+        tag: v${{ github.event.inputs.version }}
+        item-path: ./dist
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
